# archi

./: .gitgnore  .gitignore  .travis.yaml  .travis.yml  README.md  conf.py  pyproject.toml  requirements.txt  run_local.py  setup.py
archi/: __init__.py
archi.egg-info/: PKG-INFO  top_level.txt
archi/data_objects/: Data.py  Mask.py  Star_class.py  __init__.py
archi/initial_detection/: dynam_method.py  fits_method.py
archi/masks_creation/: Mask.py  __init__.py  circular_mask.py  shape_mask.py
archi/output_creation/: folder_handler.py  photometry_outputs.py  storage_handler.py
archi/routines/: Photo_Controller.py  photometric_process.py
archi/star_track/: __init__.py  dynamical_centers.py  offset_centers.py  star_tracking_handler.py  static_method.py
archi/utils/: __init__.py
archi/utils/data_export/: export_fits.py  export_photo_info.py  export_txt.py
archi/utils/factors_handler/: factors_handlers.py
archi/utils/misc/: calculate_moments.py  logger_setup.py  parameters_validator.py  (+1 more)
cluster_runs/: run_archi.py
configuration_files/: example_config_file.yaml
docs/: conf.py  index.rst
docs/archi_info/: overview.rst  release.rst
docs/modules/: masks.rst  outputs.rst  stars.rst  utility.rst
docs/tutorials/: LC_extract.rst
docs/user_guides/: Controller.rst  configs.rst  optimization.rst  results.rst  user_interface.rst
pyarchi/: __init__.py
pyarchi/data_objects/: Data.py  Mask.py  Star_class.py  __init__.py
pyarchi/initial_detection/: __init__.py  dynam_method.py  fits_method.py
pyarchi/masks_creation/: __init__.py  circular_mask.py  grid_conversion.py  shape_mask.py
pyarchi/output_creation/: __init__.py  photometry_outputs.py  storage_handler.py
pyarchi/routines/: Photo_Controller.py  __init__.py  photometric_process.py
pyarchi/star_track/: __init__.py  dynamical_centers.py  offset_centers.py  star_tracking_handler.py  static_method.py
pyarchi/utils/: __init__.py
supernova_slurm/: run_archi.sh
(+24 files in other folders)
