[tool.poetry]
name = "pyarchi"
version = "1.1"
license='GNU General Public License v3.0'
description = "Photometry for CHEOPS's background stars"
authors = ["Kamuish <amiguel@astro.up.pt>"]
readme = "README.md"
repository = "https://github.com/Kamuish/archi"
documentation = "https://archi.readthedocs.io/en/latest/"
classifiers=[
            'Programming Language :: Python :: 3.6',
            'Programming Language :: Python :: 3.7',
            'Programming Language :: Python :: 3.8'
      ]
packages = [
    { include = "pyarchi"},
]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1.2"
pyyaml = "^5.3"
opencv-python = "^4.1.2"
scipy = "^1.4.1"
astropy = "^4.0"
imageio = "^2.8.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"
twine = "^3.1.1"
sphinx = "^2.4.1"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
